--- a/index.html
+++ b/index.html
@@ -4,112 +4,118 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Text Card</title>
+    <title>NELEA_BEA.COM</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-   body, html {
-    height: 100%;
-    margin: 0;
-    font-family: sans-serif;
-}
-
-.container-fluid {
-    padding: 0;
-    height: 100vh;
-    display: flex;
-    flex-direction: column; /* Column direction to place elements vertically */
-}
-
-.card {
-    flex: 1; /* Allow card to take available space */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    box-sizing: border-box;
-    overflow: hidden; /* Ensure no scrollbars */
-    background: #fff; /* Background color of the card */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add shadow to the card */
-}
-
-.card-header {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px 0;
-    background: white; /* Ensure it has a background color */
-}
-
-#inputText {
-    width: 60%; /* Adjust the width */
-    max-width: 400px; /* Limit the maximum width */
-    padding: 10px; /* Add padding for better look */
-    font-size: 1rem; /* Set a reasonable font size */
-    border: 1px solid #d3d3d3;
-    border-radius: 5px;
-    text-align: center; /* Keep the text centered */
-}
-
-.text {
-    display: inline-block;
-    white-space: nowrap; /* Prevent wrapping */
-    overflow: hidden; /* Ensure no scrollbars */
-    text-align: center;
-    width: 100%;
-}
-
-.charbox {
-    display: inline-block;
-    vertical-align: middle;
-}
-
-.char {
-    font-size: 2em;
-    display: inline-block;
-    color: white; 
-    padding: 30px;
-}
-
-.count {
-    display: inline-block;
-    font-size: 0.4em;
-    margin-left: 5px;
-    vertical-align: top;
-    color: white; /* Set text color to white */
-}
-
-.card-footer {
-    background: white; /* Ensure it has a background color */
-    padding: 10px;
-    text-align: center;
-    font-size: 0.75rem;
-}
-
-    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container-fluid">
         <div class="card-header">
-            <input id="inputText" type="text" placeholder="Enter your text here" aria-label="Input">
+            <input id="inputText"   type="text" placeholder="Enter your text here" >
+            <!-- Button trigger password modal -->
+            <button type="button" class="btn btn-danger" id="openModalButton">
+                <i class="fa-solid fa-heart"></i>
+            </button>
+            <!-- Dark Mode Toggle Button -->
+            <button type="button" class="btn btn-secondary" id="toggleDarkMode">
+                <i class="fa-solid fa-moon"></i>
+            </button>
+            <!-- Fullscreen Toggle Button -->
+            <button type="button" class="btn btn-primary" id="toggleFullscreen">
+                <i class="fa-solid fa-expand"></i>
+            </button>
+
+            <!-- Example single danger button -->
+            <div class="btn-group">
+                <button type="button" class="btn btn-warning dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="fa-solid fa-brush text-danger"></i>
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#" id="red">red & gray</a></li>
+                    <li><a class="dropdown-item" href="#" id="purple">Purple & gray</a></li>
+                    <li><a class="dropdown-item" href="#" id="pink">Pink & gray</a></li>
+                    <li><a class="dropdown-item" href="#" id="normal">Normal</a></li>
+                </ul>
+            </div>
+
+            <!-- Password Modal -->
+            <div class="modal fade" id="passwordModal" tabindex="-1" aria-labelledby="passwordModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="passwordModalLabel">Enter Password</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <input type="password" id="passwordInput" class="form-control" placeholder="Password">
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-primary" id="submitPasswordButton">Submit</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="exampleModalLabel">I LOVE YOU ALWAYS <i class="fa-solid fa-heart-pulse text-danger"></i></h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="1st.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="4th.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="2nd.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="3rd.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="5fth.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="card">
             <div class="text" id="displayText">
                 <span class="charbox">
-                    <span class="char">Default Text</span>
-                    <span class="count">1</span>
+                    <span class="char text-primary char" style="font-size: 50vh;" ><i class="fa-regular fa-face-kiss-wink-heart "></i></span>
+                    <span class="count"></span>
                 </span>
             </div>
         </div>
-        <div class="card-footer text-body-secondary">
-            MADE WITH LOVE BY NELEA BEA - Coder@mrAnthony.com
+        <div class="card-footer ">
+            MADE WITH LOVE BY NELEA BEA - <a href="https://web.facebook.com/antony.capuyan" class="text-danger">Coder@MrAnthony.com <i class="fa-brands fa-facebook"></i></a>
         </div>
     </div>
 
     <script>
+        let selectedColor = 'normal'; // Default color
+
         document.getElementById('inputText').addEventListener('input', function () {
             const displayText = this.value;
             const textContainer = document.getElementById('displayText');
@@ -118,17 +124,16 @@
             let count = 1;
 
             if (displayText === '') {
-                textContainer.innerHTML = `<span class="charbox"><span class="char">Default Text</span><span class="count">1</span></span>`;
+                textContainer.innerHTML = `<span class="charbox"><span class="char"> <i class="fa-regular fa-face-kiss-wink-heart text-primary "></i></span><span class="count"></span></span>`;
             } else {
                 for (let i = 0; i < displayText.length; i++) {
                     const char = displayText[i];
                     const span = document.createElement('span');
                     span.className = 'charbox';
-                    span.style.backgroundColor = char !== ' ' ? (count % 2 === 0 ? 'red' : 'gray') : 'transparent';
                     span.innerHTML = `<span class="char">${char}</span>`;
 
                     if (char !== ' ') {
-                        span.innerHTML += `<span class="count">${count}</span>`;
+                        span.innerHTML += `<span class="count">${count} </span>`;
                         count++;
                     }
 
@@ -136,24 +141,104 @@
                 }
             }
 
+            applyColor(selectedColor); 
             adjustFontSize(textContainer);
         });
 
         function adjustFontSize(textContainer) {
             const containerWidth = textContainer.clientWidth;
-            let fontSize = 100; // Start with a large font size
+            let fontSize = 100;
             textContainer.style.fontSize = `${fontSize}px`;
 
-            while (textContainer.scrollWidth > containerWidth && fontSize > 10) { // Ensure the text fits within the container
+            while (textContainer.scrollWidth > containerWidth && fontSize > 10) { 
                 fontSize--;
                 textContainer.style.fontSize = `${fontSize}px`;
             }
         }
 
         window.addEventListener('resize', function () {
-            adjustFontSize(document.getElementById('displayText')); // Adjust on window resize
+            adjustFontSize(document.getElementById('displayText')); 
         });
+
+        function applyColor(color) {
+            const colorMap = {
+                'red': ['red', 'gray'], 
+                'purple': ['purple', 'gray'],
+                'pink': ['pink', 'gray'],
+                'normal': ['rgb(190, 187, 187)', 'gray'] 
+            };
+
+            const [oddColor, evenColor] = colorMap[color] || ['rgb(190, 187, 187)', 'gray'];
+            const charboxes = document.querySelectorAll('#displayText .charbox');
+            charboxes.forEach((box, index) => {
+                const char = box.querySelector('.char').textContent;
+                if (char !== ' ') {
+                    box.style.backgroundColor = (index % 2 === 0) ? oddColor : evenColor;
+                }
+            });
+        }
+
+        const colorButtons = document.querySelectorAll('.dropdown-item');
+        colorButtons.forEach(button => {
+            button.addEventListener('click', function () {
+                selectedColor = this.id; 
+                applyColor(selectedColor); 
+            });
+        });
+
+        document.getElementById('openModalButton').addEventListener('click', function () {
+            const passwordModal = new bootstrap.Modal(document.getElementById('passwordModal'));
+            passwordModal.show();
+        });
+
+        document.getElementById('submitPasswordButton').addEventListener('click', function () {
+            const enteredPassword = document.getElementById('passwordInput').value;
+            const correctPassword = 'neleacapuyan'; 
+
+            if (enteredPassword === correctPassword) {
+                const passwordModal = bootstrap.Modal.getInstance(document.getElementById('passwordModal'));
+                passwordModal.hide();
+                const exampleModal = new bootstrap.Modal(document.getElementById('exampleModal'));
+                exampleModal.show();
+            } else {
+                alert('Incorrect password');
+            }
+        });
+
+       
+        const currentTheme = localStorage.getItem('theme') || 'light-mode';
+        document.body.classList.add(currentTheme);
+
+        document.getElementById('toggleDarkMode').addEventListener('click', function () {
+            if (document.body.classList.contains('light-mode')) {
+                document.body.classList.replace('light-mode', 'dark-mode');
+                localStorage.setItem('theme', 'dark-mode');
+            } else {
+                document.body.classList.replace('dark-mode', 'light-mode');
+                localStorage.setItem('theme', 'light-mode');
+            }
+        });
+
+        function toggleFullscreen() {
+            if (!document.fullscreenElement) {
+                document.documentElement.requestFullscreen().catch(err => {
+                    alert(`Error attempting to enable fullscreen mode: ${err.message} (${err.name})`);
+                });
+            } else {
+                if (document.exitFullscreen) {
+                    document.exitFullscreen().catch(err => {
+                        alert(`Error attempting to exit fullscreen mode: ${err.message} (${err.name})`);
+                    });
+                }
+            }
+        }
+
+ 
+        document.getElementById('toggleFullscreen').addEventListener('click', toggleFullscreen);
     </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 
 </html>
